--- a/front/src/components/Footer/styles/Footer.css
+++ b/front/src/components/Footer/styles/Footer.css
@@ -32,3 +32,20 @@ footer {
 .copyright {
   font-size: 14px;
 }
+
+@media(max-width: 768px){
+  .logoFooter {
+    display: none;
+  }
+
+  .socialMediaFooter,
+  .copyright {
+    width: 100%;
+    text-align: center;
+  }
+
+  footer {
+    display: flex;
+    flex-direction: column;
+  }
+}
