component updated for current type state and finished login route

--- a/front/src/App.css
+++ b/front/src/App.css
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 }
+
+.fade-in {
+  transition: opacity .5s ease;
+}
+
+.fade-out {
+  opacity: 0;
+  transition: opacity .5s ease;
+}
