--- a/front/src/pages/main.css
+++ b/front/src/pages/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;600&family=Montserrat:wght@400;700&display=swap');
+
 /* BANNER */
 #banner {
   padding: 10%;
